# vajra

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: argparser.h  vajra.hpp
src/: main.cpp
